UI fixups to improve media-queries on various screens and add missing ones. Moved darkmode toggle to a custom button to allow for cleaner UI on mobiles devices. Added additional button for hints tooltip modal in addition to it being invoked on certain shortcuts to improve experience on mobile where keystrokes are not available.

--- a/static/global.css
+++ b/static/global.css
@@ -34,9 +34,18 @@ code {
     border-radius: 2px;
 }
 
-@media (min-width: 400px) {
+@media (max-width: 768px) {
     body {
         font-size: 16px;
+        line-height: 0.5em;
+    }
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        line-height: 0.5em;
     }
 }
 
